@@ -237,7 +237,6 @@ LIB_GCC
 LIB_MATH
 LIB_MOTIF
 LIB_STANDARD
-LIB_STANDARD_LIBSRC
 LINKER
 LINK_CRTL_SHARE
 LINUX_SBRK_BUG
