@@ -112,7 +112,6 @@ along with GNU Emacs.  If not, see <http://www.gnu.org/licenses/>.  */
 #define PENDING_OUTPUT_COUNT(FILE) ((FILE)->_p - (FILE)->_bf._base)
 #define GETPGRP_NO_ARG 1
 #define SYSV_SYSTEM_DIR 1
-#define LIB_STANDARD_LIBSRC
 #define UNEXEC unexcw.o
 #define POSIX_SIGNALS 1
 /* force the emacs image to start high in memory, so dll relocation
