@@ -1,3 +1,9 @@
+2008-07-17  Andreas Schwab  <schwab@suse.de>
+
+	* Makefile.in (INSTALL_SCRIPT): Remove duplicate definition.
+	(LIB_STANDARD_LIBSRC): Don't define.
+	(LOADLIBES): Remove LIB_STANDARD_LIBSRC.
+
 2008-07-16  Adrian Robert <Adrian.B.Robert@gmail.com>
 
 	* Makefile.in: Change GNUSTEP to NS_IMPL_GNUSTEP, COCOA to
